--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.3
 astor==0.8.1
 attrdict==2.0.1
 attrs==22.1.0
@@ -35,18 +36,19 @@ idna==3.3
 imageio==2.21.2
 imgaug==0.4.0
 importlib-metadata==4.2.0
+imutils==0.5.4
 itsdangerous==2.1.2
 jarowinkler==1.2.1
 Jinja2==3.1.2
 kafka-python==2.0.2
 kiwisolver==1.4.4
 lmdb==1.3.0
+loguru==0.6.0
 lxml==4.8.0
 MarkupSafe==2.1.1
 matplotlib==3.5.3
 mccabe==0.7.0
 nb-filelock==0.7
-nb-log==7.7
 networkx==2.6.3
 nodeenv==1.7.0
 numpy==1.19.3
@@ -58,8 +60,9 @@ packaging==21.3
 paddleocr==2.5.0.3
 paddlepaddle==2.1.0
 pandas==1.3.5
+pefile==2022.5.30
 pika==1.3.0
-Pillow==9.2.0
+Pillow==6.2.2
 platformdirs==2.5.2
 portalocker==2.5.1
 pre-commit==2.20.0
@@ -72,6 +75,8 @@ pycodestyle==2.9.1
 pycparser==2.21
 pycryptodome==3.15.0
 pyflakes==2.5.0
+pyinstaller==5.4.1
+pyinstaller-hooks-contrib==2022.10
 pymongo==4.0.2
 PyMySQL==1.0.2
 pyparsing==3.0.9
@@ -81,6 +86,7 @@ python-Levenshtein==0.12.2
 pytz==2022.2.1
 PyWavelets==1.3.0
 pywin32==304
+pywin32-ctypes==0.2.0
 PyYAML==6.0
 pyzbar==0.1.9
 rapidfuzz==2.6.1
@@ -102,4 +108,5 @@ virtualenv==20.16.2
 visualdl==2.2.3
 watchdog==2.1.9
 Werkzeug==2.2.2
+win32-setctime==1.1.0
 zipp==3.8.1
